@startuml

interface PdfReader
interface HtmlParser
class PdfBoxReader
class HtmlJsoupParser

PdfReader <|.. PdfBoxReader
HtmlParser <|.. HtmlJsoupParser

class ImgwPdfService

PdfBoxReader <-- ImgwPdfService
HtmlJsoupParser <-- ImgwPdfService

interface HtmlParser {
+getFilenamesWithPatternFromBaseurl(String, String): List<String>
}

interface PdfReader {
+getText(InputStream): String
+getImages(InputStream): List<BufferedImage>
}


@enduml